# ghlfolder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conandata.yml  vcpkg.json
include/: bar_pool.hpp  curl_wrapper.hpp  fetch_bar.hpp  matcher.hpp  progress_bar.hpp  repo.hpp  term.hpp  thread_pool.hpp  utils.hpp  zip_file.hpp
src/: bar_pool.cpp  fetch_bar.cpp  main.cpp  matcher.cpp  progress_bar.cpp  repo.cpp  term.cpp  thread_pool.cpp  utils.cpp  zip_file.cpp
